--- a/themes/default/templates/partners/contact_detail.html
+++ b/themes/default/templates/partners/contact_detail.html
@@ -55,6 +55,7 @@
                 {% property_table object "['full_name', ['nickname', 'date_of_birth'], ['gender', 'ssn'], ['language', 'timezone'], ['email', 'url'],  ['main_address', 'main_phone_number'], 'user', 'tags', 'categories']" %}
             </table>
         </div>
+        {% include "elements/comments.html" %}
         {% endblock %}
     </div>
 </div>
