--- a/themes/default/templates/widgets/widget_delete.html
+++ b/themes/default/templates/widgets/widget_delete.html
@@ -22,7 +22,7 @@
 {% endblock %}
 
 {% block main %}
-<form method="post" action="{% url widget_delete object.slug %}">
+<form method="post" action="{% url widget_delete object.slug %}?next={{ next }}">
     {% csrf_token %}
     <p>{% trans "Are you sure you want to delete this widget?" %}</p>
     <span class="submit"><input type="submit" value="{% trans "Yes, I'm sure." %}" /></span>
