--- a/themes/default/templates/widgets/widget_edit.html
+++ b/themes/default/templates/widgets/widget_edit.html
@@ -10,9 +10,7 @@
 
 {% block breadcrumbs %}
     {% add_crumb 'Home' '/' %}
-    {% add_crumb 'Users' 'user_list' %}
-    {% add_crumb user user.get_absolute_url %}
-    {% add_crumb 'Widgets' '/' %}
+    {% add_crumb 'Widgets' %}
     {% if object.pk %}
     {% add_crumb object.title object.get_absolute_url %}
     {% add_crumb 'Edit' %}
@@ -34,9 +32,9 @@
 
 {% block main %}
 {% if object.pk %}
-<form method="post" action="{% url widget_edit object.slug %}">
+<form method="post" action="{% url widget_edit object.slug %}?next={{ next }}">
 {% else %}
-<form method="post" action="{% url widget_add %}">
+<form method="post" action="{% url widget_add object.region.slug %}?next={{ next }}">
 {% endif %}
     {% csrf_token %}
     <table class="properties">
