Small fix to the CSS.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@806 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -1286,7 +1286,8 @@ form .submit input:hover, .submit a:hover { background: #1f1f1f; }
     margin-right: 5px;
 }
 
-#main .text-widget-template .body { padding: 10px; }
+#main .text-widget-template .body,
+#main .categories-widget-template .body { padding: 10px; }
 
 #main .milestones .actions {
     position: relative;
