--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -275,12 +275,12 @@ form .submit input, .submit a {
     margin: 0;
     color: #fff;
     font-weight: bold;
-    background: #ce0600;
+    background: #ce0600 url(images/button.jpg) repeat-x bottom;
     border: 1px solid #1f1f1f;
     text-align: center;
 }
 
-form .submit input:hover, .submit a:hover { background: #1f1f1f; }
+form .submit input:hover, .submit a:hover { background: #1f1f1f url(images/footer.jpg) repeat-x top; }
 
 .paginator {
     clear: both;
