Small CSS improvements.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@808 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -1287,7 +1287,10 @@ form .submit input:hover, .submit a:hover { background: #1f1f1f url(images/foote
 }
 
 #main .text-widget-template .body,
-#main .categories-widget-template .body { padding: 10px; }
+#main .categories-widget-template .body,
+#main .tag-cloud-widget-template .body { padding: 10px; }
+
+#main .categories-widget-template ul { margin-bottom: 0; }
 
 #main .milestones .actions {
     position: relative;
