Changed display order of project fields.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@809 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/projects/project_edit.html
+++ b/themes/default/templates/projects/project_edit.html
@@ -38,7 +38,7 @@
 {% endif %}
     {% csrf_token %}
     <table class="properties">
-        {% property_table form "['title', 'code', 'description', 'manager', 'status', 'categories', 'tags', 'allow_comments']" %}
+        {% property_table form "['title', ['code', 'status'], 'description', 'manager', 'categories', 'tags', 'allow_comments']" %}
     </table>
     <span class="submit"><input type="submit" value="{% trans 'Save' %}"/></span>
 </form>
