--- a/themes/default/templates/documents/hardcopy_delete.html
+++ b/themes/default/templates/documents/hardcopy_delete.html
@@ -1,20 +1,1 @@
-{% extends "base.html" %}
-
-{% load i18n %}
-
-{% block meta_title %}{{ object }}{% endblock %}
-
-{% block title %}
-<div class="title">
-    <h1>{{ object }}</h1>
-    <h2>{% trans 'Delete' %}</h2>
-</div>
-{% endblock %}
-
-{% block main %}
-<form method="post" action="{% url hardcopy_delete object.document.pk object.pk %}">
-    {% csrf_token %}
-    <p>{% trans "Are you sure you want to delete this hard copy?" %}</p>
-    <span class="submit"><input type="submit" value="{% trans "Yes, I'm sure." %}" /></span>
-</form>
-{% endblock %}
+{% extends "base_delete.html" %}
