--- a/themes/default/templates/notifications/notification_delete.html
+++ b/themes/default/templates/notifications/notification_delete.html
@@ -1,9 +1,6 @@
-{% extends "base.html" %}
+{% extends "base_delete.html" %}
 
-{% load i18n %}
 {% load breadcrumbs %}
-
-{% block meta_title %}{{ object }}{% endblock %}
 
 {% block breadcrumbs %}
     {% add_crumb 'Home' '/' %}
@@ -12,19 +9,4 @@
     {% add_crumb 'Notifications' 'notification_list' object.user.username %}
     {% add_crumb object object.get_absolute_url %}
     {% add_crumb 'Delete' %}
-{% endblock %}
-
-{% block title %}
-<div class="title">
-    <h1>{{ object|capfirst }}</h1>
-    <h2>{% trans 'Delete' %}</h2>
-</div>
-{% endblock %}
-
-{% block main %}
-<form method="post" action="{% url notification_delete user.username object.pk %}">
-    {% csrf_token %}
-    <p>{% trans "Are you sure you want to delete this notification?" %}</p>
-    <span class="submit"><input type="submit" value="{% trans "Yes, I'm sure." %}" /></span>
-</form>
 {% endblock %}
