--- a/themes/default/templates/products/product_delete_supply.html
+++ b/themes/default/templates/products/product_delete_supply.html
@@ -1,9 +1,6 @@
-{% extends "base.html" %}
+{% extends "base_delete.html" %}
 
-{% load i18n %}
 {% load breadcrumbs %}
-
-{% block meta_title %}{{ object }}{% endblock %}
 
 {% block breadcrumbs %}
     {% add_crumb 'Home' '/' %}
@@ -12,19 +9,4 @@
     {% add_crumb 'Supplies' 'product_supplies' object.product.pk %}
     {% add_crumb object.supplier object.get_absolute_url %}
     {% add_crumb 'Delete' %}
-{% endblock %}
-
-{% block title %}
-<div class="title">
-    <h1>{{ object }}</h1>
-    <h2>{% trans 'Delete' %}</h2>
-</div>
-{% endblock %}
-
-{% block main %}
-<form method="post" action="{% url product_delete_supply object.product.pk object.pk %}">
-    {% csrf_token %}
-    <p>{% trans "Are you sure you want to delete this supply?" %}</p>
-    <span class="submit"><input type="submit" value="{% trans "Yes, I'm sure." %}" /></span>
-</form>
 {% endblock %}
