--- a/themes/default/templates/projects/milestone_delete.html
+++ b/themes/default/templates/projects/milestone_delete.html
@@ -1,9 +1,6 @@
-{% extends "base.html" %}
+{% extends "base_delete.html" %}
 
-{% load i18n %}
 {% load breadcrumbs %}
-
-{% block meta_title %}{{ object|striptags|capfirst }}{% endblock %}
 
 {% block breadcrumbs %}
     {% add_crumb 'Home' '/' %}
@@ -12,19 +9,4 @@
     {% add_crumb 'Milestones' 'milestone_list' object.project.code %}
     {% add_crumb object object.get_absolute_url %}
     {% add_crumb 'Delete' %}
-{% endblock %}
-
-{% block title %}
-<div class="title">
-    <h1>{{ object|striptags|capfirst }}</h1>
-    <h2>{% trans 'Delete' %}</h2>
-</div>
-{% endblock %}
-
-{% block main %}
-<form method="post" action="{% url milestone_delete object.project.code object.code %}">
-    {% csrf_token %}
-    <p>{% trans "Are you sure you want to delete this milestone?" %}</p>
-    <span class="submit"><input type="submit" value="{% trans "Yes, I'm sure." %}" /></span>
-</form>
 {% endblock %}
