--- a/themes/default/templates/taxonomy/category_delete.html
+++ b/themes/default/templates/taxonomy/category_delete.html
@@ -1,28 +1,10 @@
-{% extends "base.html" %}
+{% extends "base_delete.html" %}
 
-{% load i18n %}
 {% load breadcrumbs %}
-
-{% block meta_title %}{{ object }}{% endblock %}
 
 {% block breadcrumbs %}
     {% add_crumb 'Home' '/' %}
     {% add_crumb 'Categories' 'category_list' %}
     {% add_crumb object object.get_absolute_url %}
     {% add_crumb 'Delete' %}
-{% endblock %}
-
-{% block title %}
-<div class="title">
-    <h1>{{ object }}</h1>
-    <h2>{% trans 'Delete' %}</h2>
-</div>
-{% endblock %}
-
-{% block main %}
-<form method="post" action="{% url category_delete object.slug %}">
-    {% csrf_token %}
-    <p>{% trans "Are you sure you want to delete this category?" %}</p>
-    <span class="submit"><input type="submit" value="{% trans "Yes, I'm sure." %}" /></span>
-</form>
 {% endblock %}
