--- a/themes/default/templates/auth/user_edit.html
+++ b/themes/default/templates/auth/user_edit.html
@@ -1,12 +1,7 @@
-{% extends "base.html" %}
+{% extends "base_edit.html" %}
 
-{% load i18n %}
 {% load breadcrumbs %}
 {% load details %}
-
-{% block meta_title %}
-{% if object.pk %}{% trans 'Edit user' %}{% else %}{% trans 'Add user' %}{% endif %}
-{% endblock %}
 
 {% block breadcrumbs %}
     {% add_crumb 'Home' '/' %}
@@ -19,31 +14,12 @@
     {% endif %}
 {% endblock %}
 
-{% block title %}
-<div class="title">
-    {% if object.pk %}
-    <h1>{{ object }}</h1>
-    <h2>{% trans 'Edit user' %}</h2>
-    {% else %}
-    <h1>{% trans 'Add user' %}</h1>
+{% block editform %}
+<table class="properties">
+    {% property_table form "['username', 'email', ['password1', 'password2'], ['first_name', 'last_name']]" %}
+    {% if pform %}
+    {% property_table pform "[['language', 'timezone']]" %}
     {% endif %}
-</div>
-{% endblock %}
-
-{% block main %}
-{% if object.pk %}
-<form method="post" action="{% url user_edit object.username %}">
-{% else %}
-<form method="post" action="{% url user_add %}">
-{% endif %}
-    <table class="properties">
-        {% csrf_token %}
-        {% property_table form "['username', 'email', ['password1', 'password2'], ['first_name', 'last_name']]" %}
-        {% if pform %}
-        {% property_table pform "[['language', 'timezone']]" %}
-        {% endif %}
-        {% property_table form "['is_active', 'is_staff', 'is_superuser', 'groups', 'user_permissions']" %}
-    </table>
-    <span class="submit"><input type="submit" value="{% trans 'Save' %}" /></span>
-</form>
+    {% property_table form "['is_active', 'is_staff', 'is_superuser', 'groups', 'user_permissions']" %}
+</table>
 {% endblock %}
