--- a/themes/default/templates/calendar/event_edit.html
+++ b/themes/default/templates/calendar/event_edit.html
@@ -1,12 +1,7 @@
-{% extends "base.html" %}
+{% extends "base_edit.html" %}
 
-{% load i18n %}
 {% load breadcrumbs %}
 {% load details %}
-
-{% block meta_title %}
-{% if object.pk %}{% trans 'Edit event' %}{% else %}{% trans 'Add event' %}{% endif %}
-{% endblock %}
 
 {% block breadcrumbs %}
     {% add_crumb 'Home' '/' %}
@@ -19,23 +14,8 @@
     {% endif %}
 {% endblock %}
 
-{% block title %}
-<div class="title">
-    {% if object.pk %}
-    <h1>{{ object }}</h1>
-    <h2>{% trans 'Edit event' %}</h2>
-    {% else %}
-    <h1>{% trans 'Add event' %}</h1>
-    {% endif %}
-</div>
-{% endblock %}
-
-{% block main %}
-<form method="post" action=".">
-    {% csrf_token %}
-    <table class="properties">
-        {% property_table form "['title', ['start', 'end'], 'description', ['status', 'public'], 'location', 'attendees', 'categories', 'tags', 'allow_comments']" %}
-    </table>
-    <span class="submit"><input type="submit" value="{% trans 'Save' %}"/></span>
-</form>
+{% block editform %}
+<table class="properties">
+    {% property_table form "['title', ['start', 'end'], 'description', ['status', 'public'], 'location', 'attendees', 'categories', 'tags', 'allow_comments']" %}
+</table>
 {% endblock %}
