--- a/themes/default/templates/hr/expensevoucher_edit.html
+++ b/themes/default/templates/hr/expensevoucher_edit.html
@@ -1,12 +1,8 @@
-{% extends "base.html" %}
+{% extends "documents/document_edit.html" %}
 
 {% load i18n %}
 {% load breadcrumbs %}
 {% load details %}
-
-{% block meta_title %}
-{% if object.pk %}{% trans 'Edit expense voucher' %}{% else %}{% trans 'Add expense voucher' %}{% endif %}
-{% endblock %}
 
 {% block breadcrumbs %}
     {% add_crumb 'Home' '/' %}
@@ -19,57 +15,38 @@
     {% endif %}
 {% endblock %}
 
-{% block title %}
-<div class="title">
-    {% if object.pk %}
-    <h1>{{ object }}</h1>
-    <h2>{% trans 'Edit expense voucher' %}</h2>
-    {% else %}
-    <h1>{% trans 'Add expense voucher' %}</h1>
-    {% endif %}
-</div>
-{% endblock %}
-
-{% block main %}
-{% if object.pk %}
-<form method="post" action="{% url expensevoucher_edit object.pk %}">
-{% else %}
-<form method="post" action="{% url expensevoucher_add %}">
-{% endif %}
-    {% csrf_token %}
-    <table class="properties">
-        {% property_table dform "['code', ['owner', 'status']]" %}
-        {% property_table form "[['employee', 'date']]" %}
-        {% property_table dform "['categories', 'tags']" %}
-    </table>
-    {{ formset.management_form }}
-    <table class="formset">
-        {% for form in formset %}
-        {% if forloop.counter0 == 0 %}
-        <tr>
-            {% for field in form.visible_fields %}
-            {% if not forloop.last %}
-            <th class="{% if field.name == 'description' %}text{% else %}char{% endif %}">{{ field.label }}</th>
-            {% endif %}
-            {% endfor %}
-            <th class="actions">{% trans "Delete?" %}</th>
-        </tr>
+{% block editform %}
+<table class="properties">
+    {% property_table dform "['code', ['owner', 'status']]" %}
+    {% property_table form "[['employee', 'date']]" %}
+    {% property_table dform "['categories', 'tags']" %}
+</table>
+{{ formset.management_form }}
+<table class="formset">
+    {% for form in formset %}
+    {% if forloop.counter0 == 0 %}
+    <tr>
+        {% for field in form.visible_fields %}
+        {% if not forloop.last %}
+        <th class="{% if field.name == 'description' %}text{% else %}char{% endif %}">{{ field.label }}</th>
         {% endif %}
-        <tr>
-            {% for field in form.visible_fields %}
-            <td{% if field.css_classes %} class="{{ field.css_classes }}"{% endif %}>
-                {% if forloop.counter0 == 0 %}
-                {% for hiddenfield in form.hidden_fields %}
-                {{ hiddenfield }}
-                {% endfor %}
-                {% endif %}
-                {{ field|safe }}
-                {{ field.errors }}
-            </td>
-            {% endfor %}
-        </tr>
         {% endfor %}
-    </table>
-    <span class="submit"><input type="submit" value="{% trans 'Save' %}"/></span>
-</form>
+        <th class="actions">{% trans "Delete?" %}</th>
+    </tr>
+    {% endif %}
+    <tr>
+        {% for field in form.visible_fields %}
+        <td{% if field.css_classes %} class="{{ field.css_classes }}"{% endif %}>
+            {% if forloop.counter0 == 0 %}
+            {% for hiddenfield in form.hidden_fields %}
+            {{ hiddenfield }}
+            {% endfor %}
+            {% endif %}
+            {{ field|safe }}
+            {{ field.errors }}
+        </td>
+        {% endfor %}
+    </tr>
+    {% endfor %}
+</table>
 {% endblock %}
