--- a/themes/default/templates/knowledge/poll_detail.html
+++ b/themes/default/templates/knowledge/poll_detail.html
@@ -17,6 +17,7 @@
 {% block title %}
 <div class="title">
     <h1>{{ object|escape|capfirst }} {% if object.closed %}[{% trans "Closed" %}]{% endif %}</h1>
+    <h2>{% block subtitle %}{% trans "Details" %}{% endblock %}</h2>
 </div>
 {% endblock %}
 
