--- a/themes/default/templates/menus/bookmark_edit.html
+++ b/themes/default/templates/menus/bookmark_edit.html
@@ -1,12 +1,7 @@
-{% extends "base.html" %}
+{% extends "base_edit.html" %}
 
-{% load i18n %}
 {% load breadcrumbs %}
 {% load details %}
-
-{% block meta_title %}
-{% if object.pk %}{% trans 'Edit bookmark' %}{% else %}{% trans 'Add bookmark' %}{% endif %}
-{% endblock %}
 
 {% block breadcrumbs %}
     {% add_crumb 'Home' '/' %}
@@ -21,27 +16,8 @@
     {% endif %}
 {% endblock %}
 
-{% block title %}
-<div class="title">
-    {% if object.pk %}
-    <h1>{{ object.title }}</h1>
-    <h2>{% trans 'Edit bookmark' %}</h2>
-    {% else %}
-    <h1>{% trans 'Add bookmark' %}</h1>
-    {% endif %}
-</div>
-{% endblock %}
-
-{% block main %}
-{% if object.pk %}
-<form method="post" action="{% url bookmark_edit object_user.username object.slug %}">
-{% else %}
-<form method="post" action="{% url bookmark_add object_user.username %}">
-{% endif %}
-    {% csrf_token %}
-    <table class="properties">
-        {% property_table form "['title', 'url', 'description']" %}
-    </table>
-    <span class="submit"><input type="submit" value="{% trans 'Save' %}"/></span>
-</form>
+{% block editform %}
+<table class="properties">
+    {% property_table form "['title', 'url', 'description']" %}
+</table>
 {% endblock %}
