--- a/themes/default/templates/partners/contact_edit.html
+++ b/themes/default/templates/partners/contact_edit.html
@@ -1,12 +1,7 @@
-{% extends "base.html" %}
+{% extends "base_edit.html" %}
 
-{% load i18n %}
 {% load breadcrumbs %}
 {% load details %}
-
-{% block meta_title %}
-{% if object.pk %}{% trans 'Edit contact' %}{% else %}{% trans 'Add contact' %}{% endif %}
-{% endblock %}
 
 {% block breadcrumbs %}
     {% add_crumb 'Home' '/' %}
@@ -19,31 +14,12 @@
     {% endif %}
 {% endblock %}
 
-{% block title %}
-<div class="title">
+{% block editform %}
+<table class="properties">
     {% if object.pk %}
-    <h1>{{ object }}</h1>
-    <h2>{% trans 'Edit contact' %}</h2>
+    {% property_table form "[['firstname', 'lastname'], ['nickname', 'date_of_birth'], ['gender', 'ssn'], ['language', 'timezone'], ['email', 'url'], ['main_address', 'main_phone_number'], 'user', 'tags', 'categories', 'allow_comments']" %}
     {% else %}
-    <h1>{% trans 'Add contact' %}</h1>
+    {% property_table form "[['firstname', 'lastname'], ['nickname', 'date_of_birth'], ['gender', 'ssn'], ['language', 'timezone'], ['email', 'url'], 'user', 'tags', 'categories', 'allow_comments']" %}
     {% endif %}
-</div>
-{% endblock %}
-
-{% block main %}
-{% if object.pk %}
-<form method="post" action="{% url contact_edit object.pk %}">
-{% else %}
-<form method="post" action="{% url contact_add %}">
-{% endif %}
-    {% csrf_token %}
-    <table class="properties">
-        {% if object.pk %}
-        {% property_table form "[['firstname', 'lastname'], ['nickname', 'date_of_birth'], ['gender', 'ssn'], ['language', 'timezone'], ['email', 'url'], ['main_address', 'main_phone_number'], 'user', 'tags', 'categories', 'allow_comments']" %}
-        {% else %}
-        {% property_table form "[['firstname', 'lastname'], ['nickname', 'date_of_birth'], ['gender', 'ssn'], ['language', 'timezone'], ['email', 'url'], 'user', 'tags', 'categories', 'allow_comments']" %}
-        {% endif %}
-    </table>
-    <span class="submit"><input type="submit" value="{% trans 'Save' %}"/></span>
-</form>
+</table>
 {% endblock %}
