--- a/themes/default/templates/partners/job_edit.html
+++ b/themes/default/templates/partners/job_edit.html
@@ -1,10 +1,7 @@
-{% extends "base.html" %}
+{% extends "base_edit.html" %}
 
-{% load i18n %}
 {% load breadcrumbs %}
 {% load details %}
-
-{% block meta_title %}{% if object.pk %}{% trans 'Edit contact' %}{% else %}{% trans 'Add contact' %}{% endif %}{% endblock %}
 
 {% block breadcrumbs %}
     {% add_crumb 'Home' '/' %}
@@ -31,31 +28,8 @@
     {% endif %}
 {% endblock %}
 
-{% block title %}
-<div class="title">
-    {% if object.pk %}
-    <h1>{{ object }}</h1>
-    {% if object.partner %}
-    <h2>{% trans 'Edit contact' %}</h2>
-    {% else %}
-    <h2>{% trans 'Edit job' %}</h2>
-    {% endif %}
-    {% else %}
-    {% if object.partner %}
-    <h1>{% trans 'Add contact' %}</h1>
-    {% else %}
-    <h1>{% trans 'Add job' %}</h1>
-    {% endif %}
-    {% endif %}
-</div>
-{% endblock %}
-
-{% block main %}
-<form method="post" action=".">
-    {% csrf_token %}
-    <table class="properties">
-        {% property_table form "[['partner', 'contact', 'role'], ['started', 'ended'], 'notes']" %}
-    </table>
-    <span class="submit"><input type="submit" value="{% trans 'Save' %}"/></span>
-</form>
+{% block editform %}
+<table class="properties">
+    {% property_table form "[['partner', 'contact', 'role'], ['started', 'ended'], 'notes']" %}
+</table>
 {% endblock %}
