--- a/themes/default/templates/projects/project_edit.html
+++ b/themes/default/templates/projects/project_edit.html
@@ -1,12 +1,7 @@
-{% extends "base.html" %}
+{% extends "base_edit.html" %}
 
-{% load i18n %}
 {% load breadcrumbs %}
 {% load details %}
-
-{% block meta_title %}
-{% if object.pk %}{% trans 'Edit project' %}{% else %}{% trans 'Add project' %}{% endif %}
-{% endblock %}
 
 {% block breadcrumbs %}
     {% add_crumb 'Home' '/' %}
@@ -19,27 +14,8 @@
     {% endif %}
 {% endblock %}
 
-{% block title %}
-<div class="title">
-    {% if object.pk %}
-    <h1>{{ object|striptags|capfirst }}</h1>
-    <h2>{% trans 'Edit project' %}</h2>
-    {% else %}
-    <h1>{% trans 'Add project' %}</h1>
-    {% endif %}
-</div>
-{% endblock %}
-
-{% block main %}
-{% if object.pk %}
-<form method="post" action="{% url project_edit object.code %}">
-{% else %}
-<form method="post" action="{% url project_add %}">
-{% endif %}
-    {% csrf_token %}
-    <table class="properties">
-        {% property_table form "['title', ['code', 'status'], 'description', 'manager', 'categories', 'tags', 'allow_comments']" %}
-    </table>
-    <span class="submit"><input type="submit" value="{% trans 'Save' %}"/></span>
-</form>
+{% block editform %}
+<table class="properties">
+    {% property_table form "['title', ['code', 'status'], 'description', 'manager', 'categories', 'tags', 'allow_comments']" %}
+</table>
 {% endblock %}
