--- a/themes/default/templates/stock/warehouse_edit.html
+++ b/themes/default/templates/stock/warehouse_edit.html
@@ -1,12 +1,7 @@
-{% extends "base.html" %}
+{% extends "base_edit.html" %}
 
-{% load i18n %}
 {% load breadcrumbs %}
 {% load details %}
-
-{% block meta_title %}
-{% if object.pk %}{% trans 'Edit warehouse' %}{% else %}{% trans 'Add warehouse' %}{% endif %}
-{% endblock %}
 
 {% block breadcrumbs %}
     {% add_crumb 'Home' '/' %}
@@ -19,27 +14,8 @@
     {% endif %}
 {% endblock %}
 
-{% block title %}
-<div class="title">
-    {% if object.pk %}
-    <h1>{{ object }}</h1>
-    <h2>{% trans 'Edit warehouse' %}</h2>
-    {% else %}
-    <h1>{% trans 'Add warehouse' %}</h1>
-    {% endif %}
-</div>
-{% endblock %}
-
-{% block main %}
-{% if object.pk %}
-<form method="post" action="{% url warehouse_edit object.pk %}">
-{% else %}
-<form method="post" action="{% url warehouse_add %}">
-{% endif %}
-    {% csrf_token %}
-    <table class="properties">
-        {% property_table form "['name', ['owner', 'address'], 'manager']" %}
-    </table>
-    <span class="submit"><input type="submit" value="{% trans 'Save' %}"/></span>
-</form>
+{% block editform %}
+<table class="properties">
+    {% property_table form "['name', ['owner', 'address'], 'manager']" %}
+</table>
 {% endblock %}
