--- a/themes/default/templates/stock/warehouse_edit_movement.html
+++ b/themes/default/templates/stock/warehouse_edit_movement.html
@@ -1,12 +1,7 @@
-{% extends "base.html" %}
+{% extends "base_edit.html" %}
 
-{% load i18n %}
 {% load breadcrumbs %}
 {% load details %}
-
-{% block meta_title %}
-{% if object.pk %}{% trans 'Edit movement' %}{% else %}{% trans 'Add movement' %}{% endif %}
-{% endblock %}
 
 {% block breadcrumbs %}
     {% add_crumb 'Home' '/' %}
@@ -18,24 +13,9 @@
     {% endif %}
 {% endblock %}
 
-{% block title %}
-<div class="title">
-    {% if object.pk %}
-    <h1>{{ object }}</h1>
-    <h2>{% trans 'Edit movement' %}</h2>
-    {% else %}
-    <h1>{% trans 'Add movement' %}</h1>
-    {% endif %}
-</div>
-{% endblock %}
-
-{% block main %}
-<form method="post" action=".">
-    {% csrf_token %}
-    <table class="properties">
-        {% property_table form "[['origin', 'destination']]" %}
-        {% property_table pform "['product', ['quantity', 'unit_price'], ['tax', 'discount'], 'notes']" %}
-    </table>
-    <span class="submit"><input type="submit" value="{% trans 'Save' %}"/></span>
-</form>
+{% block editform %}
+<table class="properties">
+    {% property_table form "[['origin', 'destination']]" %}
+    {% property_table pform "['product', ['quantity', 'unit_price'], ['tax', 'discount'], 'notes']" %}
+</table>
 {% endblock %}
