--- a/themes/default/templates/todo/task_edit.html
+++ b/themes/default/templates/todo/task_edit.html
@@ -1,12 +1,7 @@
-{% extends "base.html" %}
+{% extends "base_edit.html" %}
 
-{% load i18n %}
 {% load breadcrumbs %}
 {% load details %}
-
-{% block meta_title %}
-{% if object.pk %}{% trans 'Edit task' %}{% else %}{% trans 'Add task' %}{% endif %}
-{% endblock %}
 
 {% block breadcrumbs %}
     {% add_crumb 'Home' '/' %}
@@ -19,27 +14,8 @@
     {% endif %}
 {% endblock %}
 
-{% block title %}
-<div class="title">
-    {% if object.pk %}
-    <h1>{{ object }}</h1>
-    <h2>{% trans 'Edit task' %}</h2>
-    {% else %}
-    <h1>{% trans 'Add task' %}</h1>
-    {% endif %}
-</div>
-{% endblock %}
-
-{% block main %}
-{% if object.pk %}
-<form method="post" action="{% url task_edit object.pk %}">
-{% else %}
-<form method="post" action="{% url task_add %}">
-{% endif %}
-    {% csrf_token %}
-    <table class="properties">
-        {% property_table form "['title', ['start', 'end'], 'description', 'categories', 'tags']" %}
-    </table>
-    <span class="submit"><input type="submit" value="{% trans 'Save' %}"/></span>
-</form>
+{% block editform %}
+<table class="properties">
+    {% property_table form "['title', ['start', 'end'], 'description', 'categories', 'tags']" %}
+</table>
 {% endblock %}
