Different "all" link for planned and unplanned tasks.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@814 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/todo/task_detail.html
+++ b/themes/default/templates/todo/task_detail.html
@@ -32,7 +32,11 @@
         <li class="delete"><a title="{% trans 'Delete' %}" href="{% url task_delete object.pk %}">{% trans 'Delete' %}</a></li>
         {% endif %}
         {% if perms.todo.change_task %}
+        {% if object.start %}
         <li class="all"><a title="{% trans 'All' %}" href="{% url task_list %}">{% trans 'All' %}</a></li>
+        {% else %}
+        <li class="all"><a title="{% trans 'All' %}" href="{% url unplanned_task_list %}">{% trans 'All' %}</a></li>
+        {% endif %}
         {% endif %}
         {% if perms.todo.change_task %}
         {% if not object.closed %}
