--- a/themes/default/templates/auth/user_detail.html
+++ b/themes/default/templates/auth/user_detail.html
@@ -18,7 +18,7 @@
 {% block title %}
 <div class="title">
     <h1>{{ object }}</h1>
-    <h2>{% block subtitle %}{% trans "Profile" %}{% endblock %}</h2>
+    <h2>{% block subtitle %}{% trans "Details" %}{% endblock %}</h2>
 </div>
 {% endblock %}
 
